[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UpgradeMenu.gd" id=1]

[node name="UpgradeMenu" type="Control"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -300.0
offset_right = 320.0
offset_bottom = 300.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Choose an Upgrade"
horizontal_alignment = 1

[node name="Option1" type="Button" parent="Panel/VBox"]
text = "Speed Upgrade"

[node name="Option2" type="Button" parent="Panel/VBox"]
text = "Durability Upgrade"

[node name="Option3" type="Button" parent="Panel/VBox"]
text = "Fuel Tank Upgrade"
